fix: color of back to top arrow in dark mode
Fix #1560

--- a/assets/scss/academic/_root.scss
+++ b/assets/scss/academic/_root.scss
@@ -359,7 +359,7 @@ footer a.back-to-top i {
 }
 
 .dark site-footer,
-.dark footer a#back_to_top i,
+.dark footer a.back-to-top i,
 .dark .docs .body-footer {
   color: rgba(255,255,255,0.54);
 }
